--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"nativescript": {
 		"id": "org.nativescript.madcatmanager",
 		"tns-android": {
-			"version": "5.4.0-2019-04-04-175425-01"
+			"version": "5.1.0"
 		}
 	},
 	"dependencies": {
-		"tns-core-modules": "5.4.0-next-2019-03-25-180930-01"
+		"tns-core-modules": "^5.3.1"
 	}
 }
